--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 
 <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-<%= render "devise/shared/error_messages", resource: @user %>
+<%= render "devise/shared/error_messages", model: f.object %>
 
 <div class="container">
     <div class="panel panel-default">
