--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
           <div class="form-group">
             <label class="control-label">パスワード</label>
             <%= f.password_field :password, class:"form-control", placeholder:"6文字以上の半角英数字" %>
-            <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+            <span class="form-text text-muted">※英字と数字の両方を含めて設定してください</span>
           </div>
           <div class="form-group">
             <label class="control-label">パスワード確認用</label>
