--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-dark" href="#">Features</a> 
       <a class="p-2 text-dark" href="#">Enterprise</a>
-      <a class="p-2 text-dark" href="#">Support</a>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
       <%= link_to '新規登録', new_user_registration_path, class:"p-2 text-dark" %>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
