--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,8 +2,8 @@
   <h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to 'CAR REVIEW', root_path%></h5>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-dark" href="#">Features</a> 
-      <a class="p-2 text-dark" href="#">Enterprise</a>
-      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
+      <%= link_to '新規投稿', new_review_path, class: "p-2 text-dark" %>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "p-2 text-dark" %>
       <%= link_to '新規登録', new_user_registration_path, class:"p-2 text-dark" %>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
