--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "p-2 text-dark" %>
       <%= link_to '新規登録', new_user_registration_path, class:"p-2 text-dark" %>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+    <%= link_to 'Sign up', new_user_session_path, class:"btn btn-outline-primary" %>
 </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
