--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,6 +2,8 @@
 
 <div class="container">
   <table class="table table-striped">
-   <%= link_to 
+   <%= link_to '編集', edit_review_path(@review.id), method: :get, class:"btn btn-outline-primary" %>
+   <%= link_to '削除', review_path(@review.id), method: :delete, class:"btn btn-outline-primary" %>
+   
   </table>
 </div>
