--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 
-<%= form_with model: @review, url: reviews_path, local: true do |f| %>
+<%= form_with model: @review, url: review_path, local: true do |f| %>
 
 <%= render "shared/error_messages", model: f.object %>
 
