--- a/app/assets/stylesheets/review/index.css
+++ b/app/assets/stylesheets/review/index.css
@@ -19,10 +19,15 @@
 
 .page {
   width: 100vw;
-  background-color: rgb(223, 237, 241);
 }
 
 
+.page-color {
+  background-color: lightblue;
+}
 
+a {
+  text-decoration: none;
+}
 
 
