--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,8 @@
         <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "p-2 text-dark" %>
       <% else %>
         <%= link_to '新規登録', new_user_registration_path, class:"p-2 text-dark" %>
+        <%= link_to 'Facebookで登録', user_facebook_omniauth_authorize_path, method: :post%>
+        <%= link_to 'Googleで登録', user_google_oauth2_omniauth_authorize_path, method: :post%>
       <% end %>
     </nav>
     <%= link_to 'Sign up', new_user_session_path, class:"btn btn-outline-primary" %>
