--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="panel panel-default">
-      <div class="panel-heading">新規会員登録</div>
+      <div class="panel-heading">新規登録</div>
       <div class="panel-body">
           <div class="form-group">
             <label class="control-label", for="user_nickname">ニックネーム</label>
