レビュー結合テスト、投稿・編集

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="panel panel-default">
-      <div class="panel-heading">新規レビュー投稿</div>
+      <div class="panel-heading">レビュー編集</div>
         <div class="panel-body">
 
           <%# 画像投稿%>
