--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -25,17 +25,16 @@
           <%= image_tag review.image, class: "img-fluid" if review.image.attached? %>
           <div class="card-body">
             <div class="card-text">
-              <p><%= review.automaker.name %></p>
-              <p><%= review.model_of_car%></p>
+              <p><%= review.automaker.name %>  /  <%= review.model_of_car%></p>
+              <p>投稿者：<%= review.user.nickname%></p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <%= link_to review_path(review.id) do %>
                   <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
                 <% end %>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <small class="text-muted"><%= review.created_at.to_s(:datetime_jp)%></small>
             </div>
           </div>
         </div>
