--- a/app/assets/stylesheets/user/resistration.css
+++ b/app/assets/stylesheets/user/resistration.css
@@ -14,3 +14,13 @@
   font-size: 15px;
   cursor: pointer;
 }
+
+.sns-icon {
+  width: 20%;
+  margin: 0 auto;
+}
+
+.sns-icon-outer {
+  display: flex;
+  justify-content: center;
+}
