--- a/app/assets/stylesheets/review/index.css
+++ b/app/assets/stylesheets/review/index.css
@@ -22,9 +22,6 @@
 }
 
 
-.page-color {
-  background-color: lightblue;
-}
 
 a {
   text-decoration: none;
@@ -40,5 +37,10 @@ a {
 footer {
   margin-top: auto;
   
+}
+
+.review_img {
+  width: 100%;
+  height: 30vh;
 }
 
