--- a/app/views/reviews/search.html.erb
+++ b/app/views/reviews/search.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="heading">
-    <p class="heading-text">検索結果</p>
+    <p class="heading-text">検索結果一覧</p>
   </div>
   <div class="row">
     <%if @results.length !=0 %>
