--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -8,16 +8,20 @@
   </div>
 </div>
 
-  
-<div >
-  <h1>
-    レビュー検索
-  </h1>
+<div class="container">
+  <div class="heading">
+    <p class="heading-text">レビュー検索</p>
+  </div>
   <%= search_form_for @p, url: search_reviews_path do |f| %>
-    <%= f.label :model_of_car_eq, '車種名' %>
-    <%= f.collection_select :model_of_car_eq, @review_model_of_car, :model_of_car, :model_of_car,  include_blank: '指定なし' %>
-    <br>
-    <%= f.submit '検索' %>
+      <div class="col-md">
+        <div class="form-group">
+          <label class="control-label">車種名</label>
+          <%= f.collection_select(:model_of_car_eq, @review_model_of_car, :model_of_car, :model_of_car, {include_blank: '指定なし'}, class:"form-control") %>
+        </div>
+        <div class="btn btn-default">
+          <%= f.submit '検索', class:"btn btn-primary"%>
+        </div>
+      </div>
   <% end %>
 </div>
 
