--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer page-color">
+<footer class="page-footer theme-color">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright: car-review.com
