--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -67,7 +67,10 @@
             <label class="control-label">悪い点</label>
             <%= f.text_area :bad_point, class:"form-control", placeholder:"例）〜がいまいち…" %>
           </div>
-
+          <div class="form-group">
+            <label class="control-label">タグ</label>
+            <%= f.text_field :tag_list, value: @review.tag_list.join(','), class:"form-control" %>
+          </div>
 
           <div class="btn btn-default">
             <%= f.submit "投稿", class:"btn btn-primary" %>
