ページネーション

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -61,9 +61,14 @@
       </div>
     <% end %>
   </div>
+  <div class="col-md-4 paginate" >
+      <%= paginate @reviews %>
+  </div>
 </div>
 </div>
 <%# /レビュー一覧表示　%>
+
+
 
 
 <%= render "shared/footer" %>
