--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -4,7 +4,7 @@
 <div class="top-image" style="background: url(<%= asset_path "2117554_m.jpg" %>) center; background-size:cover;">
   <div class="content">
       <h1 class="display-4">Welcome to Car-Review</h1>
-      <p class="lead">会員登録をして車のレビューを書いてみよう！</p>
+      <p class="lead">会員登録をして車のレビューを書いてみよう！！</p>
   </div>
 </div>
 
